--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,1 @@
-html, body {
-  height: 100%;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+@import '~todomvc-app-css/index.css';
